--- a/index.html
+++ b/index.html
@@ -4,135 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - Portfolio</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background: #f5f5f5;
-        }
-
-        header {
-            background: white;
-            padding: 2rem 0;
-            border-bottom: 1px solid #e0e0e0;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 0 2rem;
-        }
-
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .tagline {
-            color: #666;
-            font-size: 1.1rem;
-        }
-
-        nav {
-            margin-top: 1.5rem;
-        }
-
-        nav a {
-            color: #333;
-            text-decoration: none;
-            margin-right: 2rem;
-            font-weight: 500;
-        }
-
-        nav a:hover {
-            color: #0066cc;
-        }
-
-        main {
-            padding: 3rem 0;
-        }
-
-        section {
-            background: white;
-            padding: 2rem;
-            margin-bottom: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-        }
-
-        h2 {
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-            border-bottom: 2px solid #0066cc;
-            padding-bottom: 0.5rem;
-        }
-
-        .project-card, .blog-card {
-            padding: 1.5rem 0;
-            border-bottom: 1px solid #e0e0e0;
-        }
-
-        .project-card:last-child, .blog-card:last-child {
-            border-bottom: none;
-        }
-
-        h3 {
-            font-size: 1.2rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .date {
-            color: #888;
-            font-size: 0.9rem;
-            margin-bottom: 0.5rem;
-        }
-
-        p {
-            color: #555;
-            margin-bottom: 0.5rem;
-        }
-
-        .view-all {
-            display: inline-block;
-            margin-top: 1rem;
-            color: #0066cc;
-            text-decoration: none;
-            font-weight: 500;
-        }
-
-        .view-all:hover {
-            text-decoration: underline;
-        }
-
-        footer {
-            background: white;
-            padding: 2rem 0;
-            text-align: center;
-            color: #666;
-            border-top: 1px solid #e0e0e0;
-        }
-
-        .social-links {
-            margin-top: 1rem;
-        }
-
-        .social-links a {
-            color: #333;
-            text-decoration: none;
-            margin: 0 1rem;
-        }
-
-        .social-links a:hover {
-            color: #0066cc;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
