--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Your Name</h1>
+            <h1>Jenna Schmitt</h1>
             <p class="tagline">Developer & Creator</p>
             <nav>
                 <a href="index.html">Home</a>
