--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header>
         <div class="container">
             <div class="nav-content">
-                <a href="index.html" class="logo">JS</a>
                 <nav>
                     <a href="index.html" class="active">Home</a>
                     <a href="about.html">About</a>
@@ -33,7 +32,7 @@
                     <div class="social-links">
                         <a href="https://github.com/jvh707" aria-label="GitHub"><i class="fab fa-github"></i></a>
                         <a href="https://linkedin.com/in/jenna-schmitt" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                        <a href="mailto:jenna.a.schmitt@example.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
+                        <a href="mailto:jenna.a.schmitt@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
                         <a href="https://instagram.com/jenna.aven" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
