--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,8 @@
             <p class="tagline">Developer & Creator</p>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="projects.html">Projects</a>
+                <a href="about.html">About</a>
+                <a href="projects.html" class="active">Projects</a>
                 <a href="blog.html">Blog</a>
             </nav>
         </div>
