--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects - Jenna Schmitt</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <div class="nav-content">
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="projects.html" class="active">Projects</a>
+                    <!-- <a href="blog.html">Blog</a> -->
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="hero" style="min-height: 60vh;">
+            <div class="container">
+                <div class="hero-content">
+                    <h1>Projects</h1>
+                    <p class="subtitle">Some things I've been working on (˶ •̀ ᴗ •́ ˶ ) ✧</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="project-card">
+                    <h3>Project Name</h3>
+                    <p>A detailed description of what this project does, the technologies used, and what you learned while building it.</p>
+                    <a href="https://github.com/yourusername/project" class="project-link">GitHub →</a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Jenna Schmitt. Built with passion.</p>
+            <p style="margin-top: 1rem;">
+                <a href="https://github.com/jvh707">GitHub</a> · 
+                <a href="https://linkedin.com/in/jenna-schmitt">LinkedIn</a> · 
+                <a href="mailto:jenna.a.schmitt@gmail.com">Email</a>
+            </p>
+        </div>
+    </footer>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Your Name</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,7 +71,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="projects.html" class="active">Projects</a>
+                <a href="projects.html" >Projects</a>
                 <a href="blog.html">Blog</a>
             </nav>
         </div>
