--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>Blog</h1>
-                    <p class="subtitle">Thoughts on code, tech, and learning</p>
+                    <p class="subtitle">Thoughts on tech, learning, and food (sometimes for thought)</p>
                 </div>
             </div>
         </section>
@@ -34,31 +34,11 @@
         <section>
             <div class="container">
                 <div class="card">
-                    <h3>Building Scalable Applications</h3>
-                    <p class="meta">December 1, 2024 · 5 min read</p>
-                    <p>Exploring architectural patterns and best practices for creating applications that grow with your user base. From microservices to monoliths, and everything in between.</p>
-                    <a href="posts/building-scalable-apps.html" class="card-link">Read more <i class="fas fa-arrow-right"></i></a>
-                </div>
-
-                <div class="card">
-                    <h3>My Journey Learning Rust</h3>
-                    <p class="meta">November 15, 2024 · 7 min read</p>
-                    <p>Reflections on diving into systems programming and what I learned along the way. The challenges, the victories, and why I think every developer should give it a try.</p>
-                    <a href="posts/learning-rust.html" class="card-link">Read more <i class="fas fa-arrow-right"></i></a>
-                </div>
-
-                <div class="card">
-                    <h3>Understanding Web Performance</h3>
-                    <p class="meta">October 28, 2024 · 6 min read</p>
-                    <p>A deep dive into optimizing web applications for speed. Covering everything from bundle sizes to lazy loading and caching strategies.</p>
-                    <a href="posts/web-performance.html" class="card-link">Read more <i class="fas fa-arrow-right"></i></a>
-                </div>
-
-                <div class="card">
-                    <h3>The Art of Code Review</h3>
-                    <p class="meta">October 10, 2024 · 4 min read</p>
-                    <p>Best practices for giving and receiving code reviews. How to provide constructive feedback and build a culture of continuous improvement.</p>
-                    <a href="posts/code-review.html" class="card-link">Read more <i class="fas fa-arrow-right"></i></a>
+                    <h3>Under Construction</h3>
+                    <!-- <p class="meta">December 12, 2025 · 5 min read</p> -->
+                    <p class="meta">December 12, 2025</p>
+                    <p>Reflections on building my personal website.</p>
+                    <!-- <a href="posts/building-scalable-apps.html" class="card-link">Read more <i class="fas fa-arrow-right"></i></a> -->
                 </div>
             </div>
         </section>
@@ -66,11 +46,11 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Your Name. Built with passion.</p>
+            <p>&copy; 2025 Jenna Schmitt. Built with passion.</p>
             <p style="margin-top: 1rem;">
-                <a href="https://github.com/yourusername">GitHub</a> · 
-                <a href="https://linkedin.com/in/yourusername">LinkedIn</a> · 
-                <a href="mailto:your.email@example.com">Email</a>
+                <a href="https://github.com/jvh707">GitHub</a> · 
+                <a href="https://linkedin.com/in/jenna-schmitt">LinkedIn</a> · 
+                <a href="mailto:jenna.a.schmitt@gmail.com">Email</a>
             </p>
         </div>
     </footer>
