--- a/projects.html
+++ b/projects.html
@@ -34,9 +34,9 @@
         <section>
             <div class="container">
                 <div class="project-card">
-                    <h3>Project Name</h3>
-                    <p>A detailed description of what this project does, the technologies used, and what you learned while building it.</p>
-                    <a href="https://github.com/yourusername/project" class="project-link">GitHub →</a>
+                    <h3>Japan Weather Predictor</h3>
+                    <p>A basic weather predictor using daily weather data from cities across Japan. Future work: using AccuWeather API for hourly weather data for more accurate predictions.</p>
+                    <a href="https://github.com/jvh707/japan-snow-predictor" class="project-link">GitHub →</a>
                 </div>
             </div>
         </section>
@@ -50,65 +50,6 @@
                 <a href="https://linkedin.com/in/jenna-schmitt">LinkedIn</a> · 
                 <a href="mailto:jenna.a.schmitt@gmail.com">Email</a>
             </p>
-        </div>
-    </footer>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Your Name</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header>
-        <div class="container">
-            <h1>Jenna Schmitt</h1>
-            <p class="tagline">Developer & Creator</p>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="projects.html" >Projects</a>
-                <a href="blog.html">Blog</a>
-            </nav>
-        </div>
-    </header>
-
-    <main class="container">
-        <section>
-            <h2>All Projects</h2>
-            
-            <div class="project-card">
-                <h3>Project Name</h3>
-                <p>A detailed description of what this project does, the technologies used, and what you learned while building it.</p>
-                <a href="https://github.com/yourusername/project" class="project-link">GitHub →</a>
-            </div>
-
-            <div class="project-card">
-                <h3>Another Project</h3>
-                <p>Description of another project with more detail about the implementation and results.</p>
-                <a href="https://github.com/yourusername/project2" class="project-link">GitHub →</a>
-            </div>
-
-            <div class="project-card">
-                <h3>Third Project</h3>
-                <p>More information about this project and what makes it interesting.</p>
-                <a href="https://github.com/yourusername/project3" class="project-link">GitHub →</a>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
-            <div class="social-links">
-                <a href="https://github.com/yourusername">GitHub</a>
-                <a href="https://linkedin.com/in/yourusername">LinkedIn</a>
-                <a href="mailto:your.email@example.com">Email</a>
-            </div>
         </div>
     </footer>
 </body>
