--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                     <a href="index.html">Home</a>
                     <a href="about.html" class="active">About</a>
                     <a href="projects.html">Projects</a>
-                    <!-- <a href="blog.html">Blog</a> -->
+                    <a href="blog.html">Blog</a>
                 </nav>
             </div>
         </div>
@@ -26,7 +26,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>About Me</h1>
-                    <p class="subtitle">Developer, learner, builder</p>
+                    <p class="subtitle">A forever learner, explorer, and builder</p>
                 </div>
             </div>
         </section>
@@ -35,8 +35,7 @@
             <div class="container">
                 <div class="card">
                     <h3>Who I Am</h3>
-                    <p>I build software to solve my own problems. If I need something and it doesn't exist, I'll make it. Most of my projects are personal tools that happen to work well enough to share.</p>
-                    <p>When I'm not coding, I'm usually reading through Hacker News, eating sweet potatoes (Hannah and Satsuma-imo are the best), or thinking about the next thing I want to build.</p>
+                    <p>I build software to solve my own problems. If I need something and it doesn't exist, I'll make it. Most of my projects are personal tools that happen to work well enough to share. When I'm not coding, I'm usually reading through Hacker News, eating sweet potatoes (Hannah and Satsuma-imo are the best), or thinking about the next thing I want to build.</p>
                 </div>
 
                 <div class="card">
@@ -71,13 +70,14 @@
                     <h4 style="color: #e4e4e7; margin-bottom: 0.5rem;">Bachelor's in Computer Science</h4>
                     <p class="meta">California Polytechnic State University · 2022 - 2025</p>
                     <p>Focused on software engineering, security, and machine learning.</p>
+                    <p>Just graduated!</p>
                 </div>
 
-                <div style="text-align: center; margin-top: 3rem;">
-                    <!-- TODO: get this working -->
+                <!-- <div style="text-align: center; margin-top: 3rem;">
+                    TODO: get this working
                     <a href="files/resume.pdf" class="btn" download>Download Resume</a>
                     <a href="mailto:jenna.a.schmitt@gmail.com" class="btn btn-secondary" style="margin-left: 1rem;">Get in Touch</a>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
