--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a href="index.html" class="active">Home</a>
                     <a href="about.html">About</a>
                     <a href="projects.html">Projects</a>
-                    <!-- <a href="blog.html">Blog</a> -->
+                    <a href="blog.html">Blog</a>
                 </nav>
             </div>
         </div>
@@ -27,12 +27,12 @@
                 <div class="hero-content">
                     <h1>Jenna Schmitt</h1>
                     <p class="subtitle">Developer & Creator</p>
-                    <p>Simplify and Connect. Passionate about creating meaningful projects and exploring new technologies.</p>
+                    <p>Simplify and Connect. Passionate about distilling new technologies and creating meaningful projects.</p>
                     
                     <div class="social-links">
+                        <a href="mailto:jenna.a.schmitt@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
                         <a href="https://github.com/jvh707" aria-label="GitHub"><i class="fab fa-github"></i></a>
                         <a href="https://linkedin.com/in/jenna-schmitt" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                        <a href="mailto:jenna.a.schmitt@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i></a>
                         <a href="https://instagram.com/jenna.aven" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
@@ -42,37 +42,24 @@
         <section>
             <div class="container">
                 <h2 class="section-title">Featured Projects</h2>
-                <p class="section-subtitle">Recent work I'm proud of</p>
+                <p class="section-subtitle">Recent work I've enjoyed or have in progress (∩˃o˂∩)</p>
                 
                 <div class="grid grid-2">
                     <div class="card">
                         <h3>Weather predictor</h3>
-                        <p class="meta">Built with React, TypeScript, Node.js</p>
-                        <p>A full-stack application that solves a specific problem with an elegant user interface and robust backend.</p>
-                        <a href="projects.html" class="card-link">View project <i class="fas fa-arrow-right"></i></a>
-                    </div>
-
-                    <!-- <div class="card">
-                        <h3>Another Project</h3>
-                        <p class="meta">Built with Python, FastAPI, PostgreSQL</p>
-                        <p>An API service that processes data efficiently and provides real-time analytics to users.</p>
+                        <p class="meta">Built in Python, trained a LSTM machine learning model with sliding window.</p>
+                        <p>A basic weather predictor using daily weather data from cities across Japan.</p>
+                        <p>Future work: using AccuWeather API for hourly weather data for more accurate predictions.</p>
                         <a href="projects.html" class="card-link">View project <i class="fas fa-arrow-right"></i></a>
                     </div>
 
                     <div class="card">
-                        <h3>Creative Solution</h3>
-                        <p class="meta">Built with Vue.js, D3.js, Firebase</p>
-                        <p>An interactive data visualization platform that makes complex information accessible and engaging.</p>
+                        <h3>Weather predictor</h3>
+                        <p class="meta">Built in Python, trained a LSTM machine learning model with sliding window.</p>
+                        <p>A basic weather predictor using daily weather data from cities across Japan.</p>
+                        <p>Future work: using AccuWeather API for hourly weather data for more accurate predictions.</p>
                         <a href="projects.html" class="card-link">View project <i class="fas fa-arrow-right"></i></a>
                     </div>
-
-                    <div class="card">
-                        <h3>Open Source Tool</h3>
-                        <p class="meta">Built with Go, Docker, Kubernetes</p>
-                        <p>A developer tool that streamlines workflows and has been adopted by teams worldwide.</p>
-                        <a href="projects.html" class="card-link">View project <i class="fas fa-arrow-right"></i></a>
-                    </div>
-                </div> -->
 
                 <div style="text-align: center; margin-top: 2rem;">
                     <a href="projects.html" class="btn">View all projects</a>
@@ -90,13 +77,6 @@
                     <p class="meta">November 15, 2024 · 7 min read</p>
                     <p>Reflections on diving into systems programming and what I learned along the way.</p>
                     <a href="posts/learning-rust.html" class="card-link">Read more <i class="fas fa-arrow-right"></i></a>
-                </div>
-
-                <div class="card">
-                    <h3>Building Scalable Applications</h3>
-                    <p class="meta">December 1, 2024 · 5 min read</p>
-                    <p>Exploring architectural patterns and best practices for creating applications that grow with your user base.</p>
-                    <a href="posts/building-scalable-apps.html" class="card-link">Read more <i class="fas fa-arrow-right"></i></a>
                 </div>
 
                 <div style="text-align: center; margin-top: 2rem;">
