--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
                     <a href="index.html">Home</a>
                     <a href="about.html">About</a>
                     <a href="projects.html" class="active">Projects</a>
-                    <!-- <a href="blog.html">Blog</a> -->
+                    <a href="blog.html">Blog</a>
                 </nav>
             </div>
         </div>
