removed a card in projects

--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <div class="hero-content">
                     <h1>Blog</h1>
-                    <p class="subtitle">Thoughts on tech, learning, and food (sometimes for thought)</p>
+                    <p class="subtitle">Tech, learning, and food (sometimes for thought)</p>
                 </div>
             </div>
         </section>
