--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                         <a href="projects.html" class="card-link">View project <i class="fas fa-arrow-right"></i></a>
                     </div>
 
-                    <div class="card">
+                    <!-- <div class="card">
                         <h3>Weather predictor</h3>
                         <p class="meta">Built in Python, trained a LSTM machine learning model with sliding window.</p>
                         <p>A basic weather predictor using daily weather data from cities across Japan.</p>
                         <p>Future work: using AccuWeather API for hourly weather data for more accurate predictions.</p>
                         <a href="projects.html" class="card-link">View project <i class="fas fa-arrow-right"></i></a>
-                    </div>
+                    </div> -->
 
                 <div style="text-align: center; margin-top: 2rem;">
                     <a href="projects.html" class="btn">View all projects</a>
